# tabular-enhancement-tool

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-docs.txt  setup.py  test.db  test_sql.db
.github/workflows/: codecov.yml  docs.yml  publish.yml  python-tests.yml
docs/: changelog.rst  conf.py  contributing.rst  examples.rst  faq.rst  index.rst  modules.rst  tabular_enhancement_tool.cli.rst  tabular_enhancement_tool.core.rst  usage.rst
examples/: cities_coords.csv  httpbin_auth_post_example.py  httpbin_post_example.py  nws_weather_example.py  posts_data.csv  sqlite_odbc_example.py  users_to_enrich.csv
tabular_enhancement_tool/: __init__.py  cli.py  core.py
tests/: test_cli.py  test_complex_data.py  test_complex_nested_mapping.py  test_core.py  test_coverage_expansion.py  test_nested_mapping.py  test_sqlalchemy.py
